--- a/smd-distributors-automated-system/src/main/webapp/css/requesthome.css
+++ b/smd-distributors-automated-system/src/main/webapp/css/requesthome.css
@@ -5,16 +5,15 @@ td, th {
   padding: 3px;
 } 
 .hbody {
-  background-image: url('../img/service2.jpg');
+background-image: url('../img/service2.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 		
 }
-table { background-color:#C0C0C0;
+.table { background-color:rgb(212, 212, 212);
 font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 60%;
     border: 1px;
     margin-left: 10px;
     opacity:0.9;
@@ -24,7 +23,7 @@ font-family: arial, sans-serif;
  font-family: arial, sans-serif;
  }
 .vcontt{
-	background-color:#C0C0C0;
+	background-color:rgb(212, 212, 212);
 		width: 700px;
 		border: 15px black;
 		font: 16px;
@@ -38,7 +37,7 @@ font-family: arial, sans-serif;
 	
 }
 .vbody {
-  background-image: url('../img/admin.jpg');
+background-image: url('../img/admin.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -73,7 +72,7 @@ font-family: arial, sans-serif;
 	}
 
 .ubody {
-  background-image: url('../img/update.jpg');
+background-image: url('../img/update.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -83,7 +82,7 @@ font-family: arial, sans-serif;
 }
 
 .dbody {
-  background-image: url('../img/delete.jpg');
+background-image: url('../img/delete.jpg'); 
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -99,3 +98,41 @@ font-family: arial, sans-serif;
     margin-left: 10px;
     opacity:0.9;
 }
+
+.row{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
+    flex-flow:wrap;
+}
+ .d1
+  {
+      width: 700px;
+      height: 250px;
+  }
+  .d2
+  {
+      width: 500px;
+      height: 250px;
+  }
+
+  .report{
+		border: 10px black;
+		margin: 10px;
+		font: 16px;
+		padding: 10px 5px 10px 5px;
+		outline-style: double;
+		outline-color: black;
+  }
+  
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+  
