--- a/smd-distributors-automated-system/src/main/webapp/css/Employe.css
+++ b/smd-distributors-automated-system/src/main/webapp/css/Employe.css
@@ -15,3 +15,9 @@
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+
+div.dataTables_wrapper {
+        width: 800px;
+        margin: 0 auto;
+    }
