--- a/smd-distributors-automated-system/src/main/webapp/css/requesthome.css
+++ b/smd-distributors-automated-system/src/main/webapp/css/requesthome.css
@@ -1,17 +1,18 @@
 @charset "ISO-8859-1";
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid #e4e4e4;
   text-align: center;
   padding: 3px;
 } 
 .hbody {
-background-image: url('../img/service2.jpg');
+	/* background-image: url('../img/service2.jpg'); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 		
 }
-.table { background-color:rgb(212, 212, 212);
+.table { 
+	/* background-color:rgb(212, 212, 212); */
 font-family: arial, sans-serif;
     border-collapse: collapse;
     border: 1px;
@@ -23,7 +24,7 @@ font-family: arial, sans-serif;
  font-family: arial, sans-serif;
  }
 .vcontt{
-	background-color:rgb(212, 212, 212);
+	background-color:rgb(238, 238, 238);
 		width: 700px;
 		border: 15px black;
 		font: 16px;
@@ -37,7 +38,7 @@ font-family: arial, sans-serif;
 	
 }
 .vbody {
-background-image: url('../img/grey2.jpg');
+/* background-image: url('../img/grey2.jpg'); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -67,7 +68,7 @@ background-image: url('../img/grey2.jpg');
 	margin: 0 auto; 
 	width:800px;
 	text-align: left;
-	background-color:#f0f5f5;
+	background-color:rgb(238, 238, 238);
 	opacity:0.8;
 	padding: 20px 12px 10px 20px;
 	
@@ -77,7 +78,7 @@ background-image: url('../img/grey2.jpg');
 }
 
 .ubody {
-background-image: url('../img/grey2.jpg');
+/* background-image: url('../img/grey2.jpg'); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -87,7 +88,7 @@ background-image: url('../img/grey2.jpg');
 }
 
 .dbody {
-background-image: url('../img/grey2.jpg'); 
+/* background-image: url('../img/grey2.jpg');  */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -98,7 +99,7 @@ background-image: url('../img/grey2.jpg');
 
 .form-control{
 	width: 60%;
-	background-color:#f0f5f5;
+	background-color:rgb(238, 238, 238);
 	border: 1px;
     margin-left: 10px;
     opacity:0.9;
